<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="16dp"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:gravity="center_horizontal">
    
    <TextView
        android:id="@+id/popup_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/delete_waring"
        android:textColor="@color/text_color_primary"/>
    </LinearLayout>
        
    <TextView
        android:id="@+id/clean"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:textSize="18sp"
        android:textColor="@color/red"
        android:gravity="center"
        android:background="@drawable/selectable_background"
        android:text="@string/clean_confirm"/>
        
    
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_line_height"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/half_dark_text_color_primary"/>
    
    <TextView
        android:id="@+id/cancle"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:textSize="18sp"
        android:text="@string/cancel"
        android:gravity="center"
        android:background="@drawable/selectable_background"
        android:textColor="@color/text_color_primary"/>
    

</LinearLayout>
