<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7f7f7" >

    <ImageView
        android:id="@+id/app_image"
        android:layout_width="62dp"
        android:layout_height="62dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <TextView
        android:id="@+id/headerText"
        style="@android:style/TextAppearance.Material.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_image"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/lockpassword_confirm_your_fp_header"
        android:textColor="?android:attr/colorAccent"
        android:visibility="gone" />

    <TextView
        android:id="@+id/detailsText"
        style="@android:style/TextAppearance.Material.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_image"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/lockpassword_confirm_your_fp_generic"
        android:textColor="@color/text_color" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detailsText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:src="@drawable/icon_lock_fp" />

    <TextView
        android:id="@+id/ptext"
        style="@style/TextAppearance.ConfirmDeviceCredentialsErrorText"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/icon"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:accessibilityLiveRegion="polite"
        android:gravity="center_vertical" />

    <TextView
        android:id="@+id/btn_switch"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="58dp"
        android:background="@drawable/lock_switch_btn_bg"
        android:gravity="center"
        android:text="@string/lockpassword_switch"
        android:textColor="#767676" />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/delta_height"
        android:layout_alignParentBottom="true"
        android:background="#000" />
</RelativeLayout >