<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/Relat"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_file"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relativeLayout_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <RelativeLayout
            android:id="@+id/popu_rela"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/popup_item"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@null"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp"
                    android:textColor="@color/white"
                    android:textSize="16dp" />

                <ImageView
                    android:id="@+id/iv_open"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/popup_item"
                    android:layout_alignRight="@id/popup_item"
                    android:clickable="true"
                    android:src="@drawable/clear_show_up" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/clear_show_limit" />

            <TextView
                android:id="@+id/text_total"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                android:layout_toLeftOf="@+id/but_all"
                android:textColor="@color/white"
                android:textSize="10dp" 
                android:gravity="center_horizontal"/>

            <Button
                android:id="@+id/but_all"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                
                android:layout_marginRight="12dp"
                android:background="@drawable/clear_draw_circle"
                android:textColor="@color/white" 
                android:layout_marginTop="12dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/jiazai_rela"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true" >

            <ProgressBar
                android:id="@+id/progressBar1"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:indeterminateDrawable="@drawable/progress_small" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="10dp"
                android:text="@string/uninstall_loading"
                android:textColor="@color/white"
                android:textSize="@dimen/the_normal" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout_2"
        android:layout_marginBottom="70dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" >

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/clear_show_limit" />

        <com.android.gphonemanager.clear.MyListView
            android:id="@+id/list_bigfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:divider="@null"
            android:fadingEdge="none"
            android:listSelector="#00000000"
            android:scrollbars="none" >
        </com.android.gphonemanager.clear.MyListView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout_delect"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <Button
            android:id="@+id/but_delect"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:background="@drawable/delect_s"
            android:enabled="false"
            android:text="@string/delect"
            android:textColor="@color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout_sure"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:visibility="gone" >

        <Button
            android:id="@+id/but_no"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignBottom="@+id/but_yes"
            android:layout_alignLeft="@+id/text_delect"
            android:background="@drawable/clear_cancel" />

        <Button
            android:id="@+id/but_yes"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/text_delect"
            android:background="@drawable/clear_sure" />

        <TextView
            android:id="@+id/text_delect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/but_yes"
            android:layout_centerHorizontal="true"
            android:text="@string/sure_delect"
            android:textColor="@color/white" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/RelativeLayout_delect"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:background="@drawable/clear_show_limit" />

</RelativeLayout>